tests/fixtures/errors/domain_on_bool.gcl
// domain_on_bool.gcl -- constraint on unsupported type
param flag: Bool = true;
